Agregar el parámetro "country" a persons y organizations
